# llama.cpp

./: CMakeLists.txt
Source/: ggml.c  main.cpp  utils.cpp  utils.h
